--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <body>
     <h1>Poem</h1>
     <h2>By Matt Pearson</h2>
-    <p>This is my <strong>poem</strong>. Please do not look at it.</p>
+    <p>This is <strong>my</strong> poem. Please do not look at it.</p>
   </body>
 </html>
